gnu/usr.bin/binutils/gas/testsuite/gas/arc/textcondcode-err.s
; { dg-do assemble { target arc*-*-* } }
	.extCondCode    cctst, -12 ; { dg-error "Error: extCondCode's second argument cannot be a negative number -12" }
